[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memsearch-mcp"
version = "0.1.0"
description = "FastMCP Python MCP server wrapping the memsearch semantic memory search API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
memsearch-mcp = "memsearch_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["memsearch_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["memsearch_mcp"]
omit = ["tests/*"]
